<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        style="@style/androinTextStyle"
        android:id="@+id/text_centr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gogame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        style="@style/AppTheme"
        android:id="@+id/playbutton_centr"
        android:text="@string/button_scissor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/playbutton_left"
        app:layout_constraintEnd_toStartOf="@id/playbutton_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_centr"
        />

    <Button
        style="@style/DrawerArrowStyle"
        android:id="@+id/playbutton_left"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/playbutton_centr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_centr"
        />

    <Button
        style="@style/DrawerArrowStyle"
        android:id="@+id/playbutton_right"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/playbutton_centr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_centr"
        />

    <Button
        style="@style/bigTextStyle"
        android:id="@+id/button_topleft"
        android:text="@string/button_topleft"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_topright"
        app:layout_constraintBottom_toTopOf="@id/text_centr"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        style="@style/bigTextStyle"
        android:id="@+id/button_topright"
        android:text="@string/button_topright"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_topleft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_centr"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextslide"
        android:text="@string/nextslide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_topright"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switcherMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nextslide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_topright"
        />

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:text="advertising space"
    android:gravity="center"
    android:textStyle="italic"
    android:textSize="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/playbutton_centr"
>
</TextView>

</androidx.constraintlayout.widget.ConstraintLayout>